[package]
name = "bufferfish-core"
authors = ["Rob Wagner <rob@sombia.com>"]
license = "MIT OR Apache-2.0"
description = "Core types, traits, and logic implementations for bufferfish."
repository = "https://github.com/robertwayne/bufferfish"
categories = ["network-programming"]
keywords = ["binary-protocol", "typescript"]
readme = "README.md"
version = "0.1.0"
edition = "2024"

[dependencies]
unicode-width = { version = "0.2", optional = true }
bytes = "1"

[features]
default = []
pretty-print = ["unicode-width"]
