[package]
name = "bufferfish-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
bufferfish-internal = { path = "../bufferfish-internal" }

syn = "2"
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"

[dev-dependencies]
trybuild = "1"
bufferfish = { path = "../bufferfish", features = ["derive"] }
