[package]
name = "bufferfish-derive"
authors = ["Rob Wagner <rob@sombia.com>"]
license = "MIT OR Apache-2.0"
description = "Macros for bufferfish."
repository = "https://github.com/robertwayne/bufferfish"
categories = ["network-programming"]
keywords = ["binary-protocol", "typescript"]
readme = "README.md"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
bufferfish-core = { path = "../bufferfish-core" }

syn = "2"
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"

[dev-dependencies]
trybuild = "1"
bufferfish = { path = "../bufferfish", features = ["derive"] }
