[package]
name = "bufferfish"
description = "Schemaless binary protocol for game networking."
authors = ["Rob Wagner <rob@sombia.com>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bufferfish-core = { path = "../bufferfish-core" }
bufferfish-derive = { path = "../bufferfish-derive", optional = true }

[features]
default = []
pretty-print = ["bufferfish-core/unicode-width"]
derive = ["bufferfish-derive"]
