[package]
name = "bufferfish"
authors = ["Rob Wagner <rob@sombia.com>"]
license = "MIT OR Apache-2.0"
description = "Binary message utility library for Rust and TypeScript interop."
repository = "https://github.com/robertwayne/bufferfish"
categories = ["network-programming"]
keywords = ["binary-protocol", "typescript"]
readme = "README.md"
version = "0.1.0"
edition = "2024"

[features]
default = []
pretty-print = ["bufferfish-core/unicode-width"]
derive = ["bufferfish-derive", "syn"]

[dependencies]
bufferfish-core = { version = "0.1", path = "../bufferfish-core" }
bufferfish-derive = { version = "0.1", path = "../bufferfish-derive", optional = true }
syn = { version = "2", features = ["full"], optional = true }

[dev-dependencies]
trybuild = "1"
